Added HDFSFileOutput to DataOutputFactory